--- a/src/partials/ourValue.html
+++ b/src/partials/ourValue.html
@@ -64,7 +64,7 @@
     </div>
     <div class="about_value">
       <div class="border_progect">
-        <h5 class="hidden">Це мої проєкти, які відображають рівень моєї майстерності</h5>
+        <h5 class="hidden">Вище проєкти, які відображають рівень моєї майстерності</h5>
       </div>
       <p>
         Фабрика ТМ «Чарівна Мозаїка» кожен день<br>вдосконалює свою майстерність<br> і тому – фабрика програмістів
@@ -73,7 +73,8 @@
         гарантує високу якість своїх виробів!
       </p>
       <div class="border_progect">
-        <h5 class="hidden">Це мої проєкти, які відображають рівень моєї майстерності</h5>
+        <h5 class="hidden">В низу мої контакти, за якими Ви можете зв'язатися зі мною або перейти на інформаційні канали
+          пром мене'</h5>
       </div>
     </div>
   </div>
