--- a/src/partials/ourValue.html
+++ b/src/partials/ourValue.html
@@ -10,55 +10,83 @@
           <a href="https://evgeniy210191.github.io/zooportal/">
             <img src="./images/images/zooportal.png" alt="some">
           </a>
-          <p class="sign_project">Zooportal</p>
+          <div class="about_project">
+            <p class="sign_project">Zooportal</p>
+            <p class="description">HTML, CSS, JS. Landing page</p>
+          </div>
         </li>
         <li class="project_element">
           <a href="https://evgeniy210191.github.io/portfolio/">
             <img src="./images/images/office.png" alt="some">
           </a>
-          <p class="sign_project">Office</p>
+          <div class="about_project">
+            <p class="sign_project">Office</p>
+            <p class="description">HTML, SCSS, JS. Landing page</p>
+          </div>
         </li>
         <li class="project_element">
           <a href="https://evgeniy210191.github.io/test-task/">
             <img src="./images/images/test-task.png" alt="some">
           </a>
-          <p class="sign_project">My first test task</p>
+          <div class="about_project">
+            <p class="sign_project">My first test task</p>
+            <p class="description">Pug, SCSS JS, JSON. Імітація відображення списку користувачів online чи ofline</p>
+          </div>
         </li>
         <li class="project_element">
           <a href="https://evgeniy210191.github.io/ice-cream/">
             <img src="./images/images/ice-creame.png" alt="some">
           </a>
-          <p class="sign_project">Ice cream</p>
+          <div class="about_project">
+            <p class="sign_project">Ice cream</p>
+            <p class="description">HTML, SCSS JS. Landing page</p>
+          </div>
         </li>
         <li class="project_element">
           <a href="https://evgeniy210191.github.io/registration-user/">
             <img src="./images/images/sign-up.png" alt="some">
           </a>
-          <p class="sign_project">Registration user</p>
+          <div class="about_project">
+            <p class="sign_project">Registration user</p>
+            <p class="description">React, chakra-ui, redux toolkit. Телефонна книга. Авторизуйтесь. Якщо Ви не
+              зареєстровані, будь ласка, зареєструйтесь. </p>
+          </div>
         </li>
         <li class="project_element">
           <a href="https://evgeniy210191.github.io/images/">
             <img src="./images/images/images.png" alt="some">
           </a>
-          <p class="sign_project">Images</p>
+          <div class="about_project">
+            <p class="sign_project">Images</p>
+            <p class="description">React, CSS, REST. Пошук картинок за назвою</p>
+          </div>
         </li>
         <li class="project_element">
           <a href="https://evgeniy210191.github.io/movies/">
             <img src="./images/images/movies.png" alt="some">
           </a>
-          <p class="sign_project">Movies</p>
+          <div class="about_project">
+            <p class="sign_project">Movies</p>
+            <p class="description">React, CSS, REST. Кінопошук. Перша сторінка відображає найпопулярніші фільми,  друга
+              - пошук за назвою</p>
+          </div>
         </li>
         <li class="project_element">
           <a href="https://evgeniy210191.github.io/feedback/">
             <img src="./images/images/feedback.png" alt="some">
           </a>
-          <p class="sign_project">Feedback</p>
+          <div class="about_project">
+            <p class="sign_project">Feedback</p>
+            <p class="description">React, CSS-JS (styled-components). Розраховує відсоток позитивних відгуків</p>
+          </div>
         </li>
         <li class="project_element">
           <a href="https://github.com/evgeniy210191">
             <img src="./images/images/git.png" alt="some">
           </a>
-          <p class="sign_project">My gitHub</p>
+          <div class="about_project">
+            <p class="sign_project">My gitHub</p>
+          </div>
         </li>
       </ul>
     </div>
