--- a/src/partials/ourValue.html
+++ b/src/partials/ourValue.html
@@ -67,7 +67,8 @@
           </a>
           <div class="about_project">
             <p class="sign_project">Movies</p>
-            <p class="description">React, CSS, REST. Кінопошук. Перша сторінка відображає найпопулярніші фільми,  друга
+            <p class="description">React, CSS, REST. Кінопошук. За допомогою роутінгу створені 2 сторінки. Перша
+              сторінка відображає найпопулярніші фільми,  друга
               - пошук за назвою</p>
           </div>
         </li>
