--- a/src/sass/utils/_reset.scss
+++ b/src/sass/utils/_reset.scss
@@ -4,9 +4,9 @@
   src: url('../fonts/Flow/flow-webfont.eot?#iefix') format('embedded-opentype'),
     url('../fonts/Flow/flow-webfont.woff2') format('woff2'),
     url('../fonts/Flow/flow-webfont.woff') format('woff'),
-    url('../fonts/Flow/flow-webfont.ttf') format('truetype'),
-    url('../fonts/Flow/flow-webfont.svg#flowregular') format('svg');
-  font-weight: normal;
+    url('../fonts/Flow/flow-webfont.ttf') format('truetype');
+  // url('../fonts/Flow/flow-webfont.svg#flowregular') format('svg');
+  // font-weight: normal;
   font-style: normal;
 }
 
