--- a/src/sass/component/_ourValue.scss
+++ b/src/sass/component/_ourValue.scss
@@ -85,7 +85,8 @@
 .sign_project {
   font-size: 24px;
   color: #7d7d7d;
-  font-family: $flow;
+  font-family: $compPro;
+  letter-spacing: 1.5px;
 }
 
 .show_at_project {
@@ -98,4 +99,5 @@
   font-size: 14px;
   font-family: $flow;
   width: 300px;
+  font-weight: 500;
 }
