--- a/src/sass/component/_product.scss
+++ b/src/sass/component/_product.scss
@@ -96,16 +96,18 @@
   right: 13%;
   width: 230px;
   min-height: 150px;
-  ul {
-    position: absolute;
-    font-size: 0;
-    width: calc((230px + 10px) * 5);
-    transition: left 250ms ease;
-    text-align: left;
-    left: 0;
-    top: 0;
-  }
 }
+.box_technique {
+  position: absolute;
+  font-size: 0;
+  width: calc((230px + 10px) * 5);
+  transition: opacity 500ms ease;
+  text-align: left;
+  opacity: 1;
+  left: 0;
+  top: 0;
+}
+
 .about_technique {
   display: inline-block;
   text-align: left;
