--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,5 +3,8 @@
     <h1>Розробка з Євгеном</h1>
     <p class="subtitle">Злагоджена та добре організована робота,<br>запорука якості</p>
     <img src="./images/images/flag-produc.png" alt="flag" class="flag">
+    <div class="img">
+      <img src="images/images/background-480.png" alt="my photo">
+    </div>
   </div>
 </header>
