--- a/src/sass/component/_header.scss
+++ b/src/sass/component/_header.scss
@@ -24,8 +24,8 @@ header {
       rgba(0, 0, 0, 0.2),
       rgba(0, 0, 0, 0.2)
     ),
-    url('../images/images/background-480.png');
-  background-size: contain;
+    url('../images/images/board-480.png');
+  background-size: cover;
   background-color: #e8f4f3;
   background-position: center;
   background-repeat: no-repeat;
@@ -52,4 +52,25 @@ header {
   position: absolute;
   bottom: 20px;
   left: 10%;
+}
+.img {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+  bottom: 10px;
+  right: 0;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+  @media screen and (min-width: 768px) {
+    width: 250px;
+    height: 250px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 300px;
+    height: 300px;
+  }
 }
