--- a/src/partials/ourValue.html
+++ b/src/partials/ourValue.html
@@ -99,7 +99,7 @@
         Фабрика ТМ «Чарівна Мозаїка» кожен день<br>вдосконалює свою майстерність<br> і тому – фабрика програмістів
         «Чарівна
         Мозаїка»<br>
-        гарантує високу якість своїх виробів!
+        гарантує високу якість своєї роботи та відповідально ставиться до її виконання!
       </p>
       <div class="border_progect">
         <h5 class="hidden">В низу мої контакти, за якими Ви можете зв'язатися зі мною або перейти на інформаційні канали
