--- a/src/partials/ourValue.html
+++ b/src/partials/ourValue.html
@@ -7,7 +7,7 @@
     <div class="our_project">
       <ul class="box_project">
         <li class="project_element">
-          <a href="https://evgeniy210191.github.io/zooportal/">
+          <a href="https://yevhenii-sulim.github.io/zooportal/">
             <img src="./images/images/zooportal.png" alt="some">
           </a>
           <div class="about_project">
@@ -16,7 +16,7 @@
           </div>
         </li>
         <li class="project_element">
-          <a href="https://evgeniy210191.github.io/portfolio/">
+          <a href="https://yevhenii-sulim.github.io/portfolio/">
             <img src="./images/images/office.png" alt="some">
           </a>
           <div class="about_project">
@@ -25,7 +25,7 @@
           </div>
         </li>
         <li class="project_element">
-          <a href="https://evgeniy210191.github.io/test-task/">
+          <a href="https://yevhenii-sulim.github.io/test-task/">
             <img src="./images/images/test-task.png" alt="some">
           </a>
           <div class="about_project">
@@ -34,7 +34,7 @@
           </div>
         </li>
         <li class="project_element">
-          <a href="https://evgeniy210191.github.io/ice-cream/">
+          <a href="https://yevhenii-sulim.github.io/ice-cream/">
             <img src="./images/images/ice-creame.png" alt="some">
           </a>
           <div class="about_project">
@@ -43,7 +43,7 @@
           </div>
         </li>
         <li class="project_element">
-          <a href="https://evgeniy210191.github.io/registration-user/">
+          <a href="https://yevhenii-sulim.github.io/registration-user/">
             <img src="./images/images/sign-up.png" alt="some">
           </a>
           <div class="about_project">
@@ -53,7 +53,7 @@
           </div>
         </li>
         <li class="project_element">
-          <a href="https://evgeniy210191.github.io/images/">
+          <a href="https://yevhenii-sulim.github.io/images/">
             <img src="./images/images/images.png" alt="some">
           </a>
           <div class="about_project">
@@ -62,7 +62,7 @@
           </div>
         </li>
         <li class="project_element">
-          <a href="https://evgeniy210191.github.io/movies/">
+          <a href="https://yevhenii-sulim.github.io/movies/">
             <img src="./images/images/movies.png" alt="some">
           </a>
           <div class="about_project">
@@ -73,7 +73,7 @@
           </div>
         </li>
         <li class="project_element">
-          <a href="https://evgeniy210191.github.io/feedback/">
+          <a href="https://yevhenii-sulim.github.io/feedback/">
             <img src="./images/images/feedback.png" alt="some">
           </a>
           <div class="about_project">
@@ -82,7 +82,7 @@
           </div>
         </li>
         <li class="project_element">
-          <a href="https://github.com/evgeniy210191">
+          <a href="https://github.com/yevhenii-sulim">
             <img src="./images/images/git.png" alt="some">
           </a>
           <div class="about_project">
