--- a/src/partials/ourValue.html
+++ b/src/partials/ourValue.html
@@ -2,13 +2,22 @@
   <div class="container">
     <h2 class="tytle_value">Мої проєкти</h2>
     <div class="img_cup">
-      <img src="images/images/cup-smal.png" alt="cup" class="cup">
+      <img src="images/images/cup-smal.png" alt="cup" class="cup" />
     </div>
     <div class="our_project">
       <ul class="box_project">
         <li class="project_element">
+          <a href="https://yevhenii-sulim.github.io/task-test-react-nike/">
+            <img src="./images/images/test-task-nike.png" alt="some" />
+          </a>
+          <div class="about_project">
+            <p class="sign_project">test-task-nike</p>
+            <p class="description">React, React-router-dom, SCSS.</p>
+          </div>
+        </li>
+        <li class="project_element">
           <a href="https://yevhenii-sulim.github.io/zooportal/">
-            <img src="./images/images/zooportal.png" alt="some">
+            <img src="./images/images/zooportal.png" alt="some" />
           </a>
           <div class="about_project">
             <p class="sign_project">Zooportal</p>
@@ -17,7 +26,7 @@
         </li>
         <li class="project_element">
           <a href="https://yevhenii-sulim.github.io/portfolio/">
-            <img src="./images/images/office.png" alt="some">
+            <img src="./images/images/office.png" alt="some" />
           </a>
           <div class="about_project">
             <p class="sign_project">Office</p>
@@ -26,16 +35,19 @@
         </li>
         <li class="project_element">
           <a href="https://yevhenii-sulim.github.io/test-task/">
-            <img src="./images/images/test-task.png" alt="some">
+            <img src="./images/images/test-task.png" alt="some" />
           </a>
           <div class="about_project">
             <p class="sign_project">My first test task</p>
-            <p class="description">Pug, SCSS JS, JSON. Імітація відображення списку користувачів online чи ofline</p>
+            <p class="description">
+              Pug, SCSS JS, JSON. Імітація відображення списку користувачів
+              online чи ofline
+            </p>
           </div>
         </li>
         <li class="project_element">
           <a href="https://yevhenii-sulim.github.io/ice-cream/">
-            <img src="./images/images/ice-creame.png" alt="some">
+            <img src="./images/images/ice-creame.png" alt="some" />
           </a>
           <div class="about_project">
             <p class="sign_project">Ice cream</p>
@@ -44,46 +56,55 @@
         </li>
         <li class="project_element">
           <a href="https://yevhenii-sulim.github.io/registration-user/">
-            <img src="./images/images/sign-up.png" alt="some">
+            <img src="./images/images/sign-up.png" alt="some" />
           </a>
           <div class="about_project">
             <p class="sign_project">Registration user</p>
-            <p class="description">React, chakra-ui, redux toolkit. Телефонна книга. Авторизуйтесь. Якщо Ви не
-              зареєстровані, будь ласка, зареєструйтесь. </p>
+            <p class="description">
+              React, chakra-ui, redux toolkit. Телефонна книга. Авторизуйтесь.
+              Якщо Ви не зареєстровані, будь ласка, зареєструйтесь. 
+            </p>
           </div>
         </li>
         <li class="project_element">
           <a href="https://yevhenii-sulim.github.io/images/">
-            <img src="./images/images/images.png" alt="some">
+            <img src="./images/images/images.png" alt="some" />
           </a>
           <div class="about_project">
             <p class="sign_project">Images</p>
-            <p class="description">React, CSS, REST. Пошук картинок за назвою</p>
+            <p class="description">
+              React, CSS, REST. Пошук картинок за назвою
+            </p>
           </div>
         </li>
         <li class="project_element">
           <a href="https://yevhenii-sulim.github.io/movies/">
-            <img src="./images/images/movies.png" alt="some">
+            <img src="./images/images/movies.png" alt="some" />
           </a>
           <div class="about_project">
             <p class="sign_project">Movies</p>
-            <p class="description">React, CSS, REST. Кінопошук. За допомогою роутінгу створені 2 сторінки. Перша
-              сторінка відображає найпопулярніші фільми,  друга
-              - пошук за назвою</p>
+            <p class="description">
+              React, CSS, REST. Кінопошук. За допомогою роутінгу створені 2
+              сторінки. Перша сторінка відображає найпопулярніші фільми,  друга
+              - пошук за назвою
+            </p>
           </div>
         </li>
         <li class="project_element">
           <a href="https://yevhenii-sulim.github.io/feedback/">
-            <img src="./images/images/feedback.png" alt="some">
+            <img src="./images/images/feedback.png" alt="some" />
           </a>
           <div class="about_project">
             <p class="sign_project">Feedback</p>
-            <p class="description">React, CSS-JS (styled-components). Розраховує відсоток позитивних відгуків</p>
+            <p class="description">
+              React, CSS-JS (styled-components). Розраховує відсоток позитивних
+              відгуків
+            </p>
           </div>
         </li>
         <li class="project_element">
           <a href="https://github.com/yevhenii-sulim">
-            <img src="./images/images/git.png" alt="some">
+            <img src="./images/images/git.png" alt="some" />
           </a>
           <div class="about_project">
             <p class="sign_project">My gitHub</p>
@@ -93,17 +114,22 @@
     </div>
     <div class="about_value">
       <div class="border_progect">
-        <h5 class="hidden">Вище проєкти, які відображають рівень моєї майстерності</h5>
+        <h5 class="hidden">
+          Вище проєкти, які відображають рівень моєї майстерності
+        </h5>
       </div>
       <p>
-        Фабрика ТМ «Чарівна Мозаїка» кожен день<br>вдосконалює свою майстерність<br> і тому – фабрика програмістів
-        «Чарівна
-        Мозаїка»<br>
-        гарантує високу якість своєї роботи та відповідально ставиться до її виконання!
+        Фабрика ТМ «Чарівна Мозаїка» кожен день<br />вдосконалює свою
+        майстерність<br />
+        і тому – фабрика програмістів «Чарівна Мозаїка»<br />
+        гарантує високу якість своєї роботи та відповідально ставиться до її
+        виконання!
       </p>
       <div class="border_progect">
-        <h5 class="hidden">В низу мої контакти, за якими Ви можете зв'язатися зі мною або перейти на інформаційні канали
-          пром мене'</h5>
+        <h5 class="hidden">
+          В низу мої контакти, за якими Ви можете зв'язатися зі мною або перейти
+          на інформаційні канали пром мене'
+        </h5>
       </div>
     </div>
   </div>
