--- a/src/partials/myProject.html
+++ b/src/partials/myProject.html
@@ -5,79 +5,25 @@
       <img src="images/images/cup-smal.png" alt="cup" class="cup" />
     </div>
     <div class="our_project">
+      <div class="border_progect">
+        <h5 class="hidden">
+          Вище проєкти, які відображають рівень моєї майстерності
+        </h5>
+      </div>
       <ul class="box_project">
-        <li class="project_element">
-          <a href="https://yevhenii-sulim.github.io/task-test-react-nike/">
-            <img src="./images/images/test-task-nike.png" alt="some" />
+        <!-- <li class="project_element is_loading">
+          <a href="https://yevhenii-sulim.github.io/feedback/">
+            <img src="./images/images/feedback.png" alt="some" />
           </a>
           <div class="about_project">
-            <p class="sign_project">test-task-nike</p>
-            <p class="description">React, React-router-dom, SCSS.</p>
-          </div>
-        </li>
-        <li class="project_element">
-          <a href="https://yevhenii-sulim.github.io/zooportal/">
-            <img src="./images/images/zooportal.png" alt="some" />
-          </a>
-          <div class="about_project">
-            <p class="sign_project">Zooportal</p>
-            <p class="description">HTML, CSS, JS. Landing page</p>
-          </div>
-        </li>
-        <li class="project_element">
-          <a href="https://yevhenii-sulim.github.io/portfolio/">
-            <img src="./images/images/office.png" alt="some" />
-          </a>
-          <div class="about_project">
-            <p class="sign_project">Office</p>
-            <p class="description">HTML, SCSS, JS. Landing page</p>
-          </div>
-        </li>
-        <li class="project_element">
-          <a href="https://yevhenii-sulim.github.io/test-task/">
-            <img src="./images/images/test-task.png" alt="some" />
-          </a>
-          <div class="about_project">
-            <p class="sign_project">My first test task</p>
+            <p class="sign_project">Feedback</p>
             <p class="description">
-              Pug, SCSS JS, JSON. Імітація відображення списку користувачів
-              online чи ofline
+              React, CSS-JS (styled-components). Розраховує відсоток позитивних
+              відгуків
             </p>
           </div>
         </li>
-        <li class="project_element">
-          <a href="https://yevhenii-sulim.github.io/ice-cream/">
-            <img src="./images/images/ice-creame.png" alt="some" />
-          </a>
-          <div class="about_project">
-            <p class="sign_project">Ice cream</p>
-            <p class="description">HTML, SCSS JS. Landing page</p>
-          </div>
-        </li>
-        <li class="project_element">
-          <a href="https://yevhenii-sulim.github.io/registration-user/">
-            <img src="./images/images/sign-up.png" alt="some" />
-          </a>
-          <div class="about_project">
-            <p class="sign_project">Registration user</p>
-            <p class="description">
-              React, chakra-ui, redux toolkit. Телефонна книга. Авторизуйтесь.
-              Якщо Ви не зареєстровані, будь ласка, зареєструйтесь. 
-            </p>
-          </div>
-        </li>
-        <li class="project_element">
-          <a href="https://yevhenii-sulim.github.io/images/">
-            <img src="./images/images/images.png" alt="some" />
-          </a>
-          <div class="about_project">
-            <p class="sign_project">Images</p>
-            <p class="description">
-              React, CSS, REST. Пошук картинок за назвою
-            </p>
-          </div>
-        </li>
-        <li class="project_element">
+        <li class="project_element is_loading">
           <a href="https://yevhenii-sulim.github.io/movies/">
             <img src="./images/images/movies.png" alt="some" />
           </a>
@@ -90,41 +36,87 @@
             </p>
           </div>
         </li>
-        <li class="project_element">
-          <a href="https://yevhenii-sulim.github.io/feedback/">
-            <img src="./images/images/feedback.png" alt="some" />
+        <li class="project_element is_loading">
+          <a href="https://yevhenii-sulim.github.io/registration-user/">
+            <img src="./images/images/sign-up.png" alt="some" />
           </a>
           <div class="about_project">
-            <p class="sign_project">Feedback</p>
+            <p class="sign_project">Registration user</p>
             <p class="description">
-              React, CSS-JS (styled-components). Розраховує відсоток позитивних
-              відгуків
+              React, chakra-ui, redux toolkit. Телефонна книга. Авторизуйтесь.
+              Якщо Ви не зареєстровані, будь ласка, зареєструйтесь. 
             </p>
           </div>
         </li>
-        <li class="project_element">
+        <li class="project_element is_loading">
+          <a href="https://yevhenii-sulim.github.io/zooportal/">
+            <img src="./images/images/zooportal.png" alt="some" />
+          </a>
+          <div class="about_project">
+            <p class="sign_project">Zooportal</p>
+            <p class="description">HTML, CSS, JS. Landing page</p>
+          </div>
+        </li>
+        <li class="project_element is_loading">
+          <a href="https://yevhenii-sulim.github.io/portfolio/">
+            <img src="./images/images/office.png" alt="some" />
+          </a>
+          <div class="about_project">
+            <p class="sign_project">Office</p>
+            <p class="description">HTML, SCSS, JS. Landing page</p>
+          </div>
+        </li>
+        <li class="project_element is_loading">
+          <a href="https://yevhenii-sulim.github.io/test-task/">
+            <img src="./images/images/test-task.png" alt="some" />
+          </a>
+          <div class="about_project">
+            <p class="sign_project">My first test task</p>
+            <p class="description">
+              Pug, SCSS JS, JSON. Імітація відображення списку користувачів
+              online чи ofline
+            </p>
+          </div>
+        </li>
+        <li class="project_element is_loading">
+          <a href="https://yevhenii-sulim.github.io/ice-cream/">
+            <img src="./images/images/ice-creame.png" alt="some" />
+          </a>
+          <div class="about_project">
+            <p class="sign_project">Ice cream</p>
+            <p class="description">HTML, SCSS JS. Landing page</p>
+          </div>
+        </li>
+        <li class="project_element is_loading">
+          <a href="https://yevhenii-sulim.github.io/images/">
+            <img src="./images/images/images.png" alt="some" />
+          </a>
+          <div class="about_project">
+            <p class="sign_project">Images</p>
+            <p class="description">
+              React, CSS, REST. Пошук картинок за назвою
+            </p>
+          </div>
+        </li>
+        <li class="project_element is_loading">
+          <a href="https://yevhenii-sulim.github.io/task-test-react-nike/">
+            <img src="./images/images/test-task-nike.png" alt="some" />
+          </a>
+          <div class="about_project">
+            <p class="sign_project">test-task-nike</p>
+            <p class="description">React, React-router-dom, SCSS.</p>
+          </div>
+        </li>
+        <li class="project_element is_loading">
           <a href="https://github.com/yevhenii-sulim">
             <img src="./images/images/git.png" alt="some" />
           </a>
           <div class="about_project">
             <p class="sign_project">My gitHub</p>
           </div>
-        </li>
+        </li> -->
       </ul>
-    </div>
-    <div class="about_value">
-      <div class="border_progect">
-        <h5 class="hidden">
-          Вище проєкти, які відображають рівень моєї майстерності
-        </h5>
-      </div>
-      <p>
-        Фабрика ТМ «Чарівна Мозаїка» кожен день<br />вдосконалює свою
-        майстерність<br />
-        і тому – фабрика програмістів «Чарівна Мозаїка»<br />
-        гарантує високу якість своєї роботи та відповідально ставиться до її
-        виконання!
-      </p>
+      <div id="mark"></div>
       <div class="border_progect">
         <h5 class="hidden">
           В низу мої контакти, за якими Ви можете зв'язатися зі мною або перейти
