--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -13,7 +13,7 @@
         <p class="bookmark_product__privat mark">
           ТМ «Private Label»
         </p>
-        <p class="tytle_book">ИНЬ-ЯНЬ</p>
+        <p class="tytle_book">MY SKILLS</p>
         <div class="box_about_technique">
           <ul class="box_technique">
             <li class="about_technique" data-atribute="html">
