--- a/src/sass/component/_myProject.scss
+++ b/src/sass/component/_myProject.scss
@@ -29,7 +29,6 @@
   margin: auto;
   position: relative;
   overflow: hidden;
-  margin-bottom: 42px;
 }
 
 .box_project {
@@ -59,6 +58,7 @@
 }
 
 .project_element {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -70,11 +70,23 @@
   border-top: 0px solid #c8a674;
   transition: border-right 200ms ease, border-left 200ms ease;
   border-radius: 10px;
+  animation:loading 1000ms ease;
   img {
     border-radius: 10px;
     width: 300px;
     height: auto;
   }
+
+@keyframes loading {
+  0% {
+    opacity:0;
+    left:-100px,
+  }
+  100%{
+    opacity:1;
+    left:0
+  }
+}
 
   &:hover {
     border-left: 2px solid #c8a674;
