--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,5 +7,5 @@
 @import './component/contacts';
 @import './component/modals';
 @import './component/benefits';
-@import './component/ourValue';
+@import './component/myProject';
 @import './component/footer';
