--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,6 @@
 <header>
   <div class="container">
-    <h1>Розробка з Євгеном</h1>
-    <p class="subtitle">Злагоджена та добре організована робота -<br>запорука якості</p>
+    <h1 class="subtitle">Злагоджена та добре організована робота -<br>запорука якості</h1>
     <img src="./images/images/flag-produc.png" alt="flag" class="flag">
     <div class="img">
       <img src="images/images/background-480.png" alt="my photo">
