--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,11 +1,9 @@
 <section class="benefits">
   <div class="container">
     <div class="img_chery">
-      <img src="./images/images/chery.png" alt="chery">
+      <img src="./images/images/chery.png" alt="chery" />
     </div>
-    <h2 class="tytle_product">
-      МОЇ ПЕРЕВАГИ
-    </h2>
+    <h2 class="tytle_product">МОЇ ПЕРЕВАГИ</h2>
     <div class="box_our_benefits">
       <div class="our_benefits">
         <p class="benefits_text">Особливий підхід</p>
@@ -20,6 +18,5 @@
         <p class="benefits_text">Уважність до деталей</p>
       </div>
     </div>
-    <img class="wood" src="./images/images/buter.png" alt="buter ">
   </div>
 </section>
